--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           </li>
           <li class="nav-item">
             <form class="form-inline my-2 my-lg-0 ">
-              <input class="form-control mr-sm-2" type="search" placeholder="Buscar producto" id="valueBusqueda"
+              <input class="form-control mr-sm-2" placeholder="Buscar producto" id="valueBusqueda"
                 aria-label="Search">
-              <button type="button" class="btn btn-success my-2 my-sm-0 btn-search" id="buscarProducto">Buscar</button>
+              <button class="btn btn-success my-2 my-sm-0 btn-search" id="buscarProducto">Buscar</button>
             </form>
           </li>
           <li class="nav-item">
